--- a/src/styles.css
+++ b/src/styles.css
@@ -412,10 +412,23 @@ article ul li {
   background: rgb(181, 250, 252, 0.9);
   box-shadow: 0px 4px 5px rgb(0, 0, 0, 0.5);
 }
-article ul li p:hover {
+article ul li p {
   transition: 2s ease;
-  color: rgb(0, 2, 255, 0.5);
+  color: rgb(0, 0, 0);
+  font-weight: 500;
+}
+article ul li p:hover {
+  color: rgb(0, 0, 180, 0.5);
 }
 article ul li img {
   min-width: 100px;
+}
+@media (max-width: 800px) {
+  article ul {
+    grid-template-columns: 1fr;
+    padding: 10px;
+  }
+  article ul li {
+    width: 350px;
+  }
 }
