--- a/src/styles.css
+++ b/src/styles.css
@@ -423,12 +423,12 @@ article ul li p:hover {
 article ul li img {
   min-width: 100px;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   article ul {
     grid-template-columns: 1fr;
     padding: 10px;
   }
   article ul li {
-    width: 350px;
+    width: 100%;
   }
 }
